--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/sweetalert2/dist/sweetalert2.min.css"
+              "node_modules/sweetalert2/dist/sweetalert2.min.css",
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
